# template-python-package

./: README.md  setup.cfg  setup.py
.github/workflows/: ci.yml  fork.yml  publish.yml  test.yml  use_template.yml
docs/: conf.py  index.rst
hello_gh_actions/: __init__.py  fizzbuzz.py  hello.py
